samples/_failures_safe/1761321438_7f6d3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12551d60.c: In function ‘main’:
./samples/SAFE/__tmp_12551d60.c:166:16: error: missing terminating " character
  166 |         printf("Memory allocation failed
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_12551d60.c:166:9: error: expected expression at end of input
  166 |         printf("Memory allocation failed
      |         ^~~~~~
./samples/SAFE/__tmp_12551d60.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_12551d60.c:166:9: error: expected declaration or statement at end of input
